src/objects/LicenseContactTransaction__c.object
<CustomObject>
    <fields>
        <fullName>AccMgrUsr__c</fullName>
        <label>AccMgrUsr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepUsr__c</fullName>
        <label>SalesRepUsr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>LicenseContactTransaction</label>
    <nameField>
        <label>LicenseContactTransaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LicenseContactTransactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>